Fix alignment of user role tokens

--- a/app/assets/stylesheets/screens/admin.scss
+++ b/app/assets/stylesheets/screens/admin.scss
@@ -338,10 +338,6 @@
   }
 }
 
-.assigned-role, .add-role-input {
-  margin-top: 5px;
-}
-
 
 .journal-edit-overlay {
   .overlay-close-x {
